--- a/pl/index.html
+++ b/pl/index.html
@@ -1,7 +1,7 @@
 <!doctype html><html dir=ltr lang=pl data-theme><head><title>Slav
 |
 Start
-</title><meta charset=utf-8><meta name=generator content="Hugo 0.123.3"><meta name=viewport content="width=device-width,initial-scale=1,viewport-fit=cover"><meta name=description content="
+</title><meta charset=utf-8><meta name=generator content="Hugo 0.124.0"><meta name=viewport content="width=device-width,initial-scale=1,viewport-fit=cover"><meta name=description content="
       Forward-thinking Solutions Architect excels in cloud migration, optimizing infrastructure for peak performance and security, deploying tailored solutions.
 
 
@@ -36,15 +36,5 @@ animated fadeInDown"><div class=post-thumbnail><a href=/onet-talk/><img src=/ima
 animated fadeInDown"><div class=post-title><h3><a href=/aws-certified-solutions-architect/>AWS Certified Solutions Architect - Associate</a></h3></div><div class=post-content><div class=p_part><p>Po ponad 10 latach pracy z AWS, zrobiłem pierwszy certyfikat jako Architekt Rozwiązań.
 23T0L60C6NE41F3G ( https://aws.amazon.com/verification )</p></div></div><div class=post-footer><div class=meta><div class=info><em class="fas fa-calendar-day"></em>
 <span class=date>Fri, Mar 24, 2023
-</span><span class=separator><a class=category href=/pl/categories/praca/>Praca</a></span></div></div></div></div><div class="post
-animated fadeInDown"><div class=post-thumbnail><a href=/2021/deska-do-krojenia/><img src=/images/2021/04/deska-wip.jpg alt="Thumbnail image" loading=lazy></a></div><div class=post-title><h3><a href=/2021/deska-do-krojenia/>Deska do krojenia</a></h3></div><div class=post-content><div class=p_part><p>Deska do krojenia jako szybki prezent dla rodziny &ldquo;Pająków&rdquo;. Deski dębowe, sklejone z lamelkami. Logo wypalone przez laser, dziura wycięta frezarką.</p></div></div><div class=post-footer><div class=meta><div class=info><em class="fas fa-calendar-day"></em>
-<span class=date>Sat, Apr 17, 2021
-</span><span class=separator><a class=category href=/pl/categories/diy/>DIY</a></span></div></div></div></div><div class="post
-animated fadeInDown"><div class=post-thumbnail><a href=/2020/warzenie-piwa/><img src=/images/2020/09/dzbanek-piwa.webp alt="Thumbnail image" loading=lazy></a></div><div class=post-title><h3><a href=/2020/warzenie-piwa/>Warzenie piwa</a></h3></div><div class=post-content><div class=p_part><p>Warzeniem piwa zaraził mnie znajomy, który poczęstował mnie swoimi produkcjami. Wcześniej nie miałem żadnego zainteresowania przy produkcji własnych alkoholi. Zaczęło się od cydru - który wydawał mi się wielkim wyzwaniem, ale dosyć szybko przerzuciłem się na warzenie piwa.
-W wielkim uproszczeniu piwo powstaje poprzez odpowiednie wygotowanie słodu z dodatkiem chmielu. Finalny alkohol powstaje oczywiście przy ciężkiej pracy naszych przyjaciół drożdży. Do pełni szczęścia i smaku potrzeba nam oczywiście jeszcze czasu.</p></div></div><div class=post-footer><div class=meta><div class=info><em class="fas fa-calendar-day"></em>
-<span class=date>Sat, Apr 17, 2021
-</span><span class=separator><a class=category href=/pl/categories/diy/>DIY</a></span></div></div></div></div><div class="post
-animated fadeInDown"><div class=post-thumbnail><a href=/2021/plywajace-narozne-biurko/><img src=/images/2021/04/plywajace-biurko.jpg alt="Thumbnail image" loading=lazy></a></div><div class=post-title><h3><a href=/2021/plywajace-narozne-biurko/>Pływające biurko narożne</a></h3></div><div class=post-content><div class=p_part><p><p>Od dawna chciałem wymienić moje &ldquo;tyczasowe&rdquo; rozwiązanie z Ikei na coś bardziej solidnego. Miało być duzo miejsca, nie miało mieć typowych nóg - oraz miało być narożne.</p></p></div></div><div class=post-footer><div class=meta><div class=info><em class="fas fa-calendar-day"></em>
-<span class=date>Sat, Apr 3, 2021
-</span><span class=separator><a class=category href=/pl/categories/diy/>DIY</a></span></div></div></div></div><div class=pagination></div></div></div></main></div><footer class="footer footer--base"><div class=by_farbox><ul class=footer__list><li class=footer__item>&copy;
+</span><span class=separator><a class=category href=/pl/categories/praca/>Praca</a></span></div></div></div></div><div class=pagination></div></div></div></main></div><footer class="footer footer--base"><div class=by_farbox><ul class=footer__list><li class=footer__item>&copy;
 2011-2024</li></ul></div></footer><script type=text/javascript src=/js/medium-zoom.min.44288fd315b6cda68c1f4743caad56535c0f81a5b5a672f385e82b3896575c1d.js integrity="sha256-RCiP0xW2zaaMH0dDyq1WU1wPgaW1pnLzhegrOJZXXB0=" crossorigin=anonymous></script></body></html>
